<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_crop"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allyouneedapp.palpicandroid.CropActivity">
    <RelativeLayout
        android:id="@+id/layout_nav_crop"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/btn_back_crop"
            android:layout_width="60dp"
            android:background="@color/colorClear"
            android:text="@string/back"
            android:textColor="@color/colorNavItemTextPressed"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/crop"
            android:textColor="@color/colorWhite"
            android:textSize="9pt"
            android:gravity="center"/>
        <Button
            android:id="@+id/btn_next_crop"
            android:layout_width="60dp"
            android:text="@string/next"
            android:background="@color/colorClear"
            android:textColor="@color/colorNavItemText"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>
        <Button
            android:id="@+id/btn_crop_crop"
            android:layout_width="60dp"
            android:text="@string/crop"
            android:background="@color/colorClear"
            android:textColor="@color/colorNavItemText"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundMain"
        android:layout_above="@+id/layout_bar_crop"
        android:layout_below="@+id/layout_nav_crop">
            <cn.jarlen.photoedit.crop.CropImageView
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cropmageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                custom:imageResource="@null" />
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>

    <LinearLayout
        android:id="@+id/layout_ratio_crop"
        android:orientation="vertical"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBarMain"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/layout_bar_crop">

        <Button
            android:id="@+id/btn_ratio_custom"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/custom"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_square"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/square"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_23"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio23"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_34"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio34"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_35"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio35"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_916"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio916"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_32"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio32"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_43"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio43"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_53"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio53"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_169"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio169"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_ratio_1911"
            android:background="@color/colorClear"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/ratio1911"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layout_bar_crop"
        android:layout_width="match_parent"
        android:background="@color/colorBackgroundMain"
        android:gravity="center"
        android:layout_height="80dp"
        android:layout_above="@+id/adView">

            <ImageButton
                android:id="@+id/btn_rotate"
                android:background="@color/colorClear"
                android:src="@mipmap/rotate"
                android:scaleType="fitXY"
                android:layout_width="80dp"
                android:layout_marginRight="80dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_alignStart="@+id/btn_rotate"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:text="Rotate"/>

            <ImageButton
                android:id="@+id/btn_resize"
                android:background="@color/colorClear"
                android:src="@mipmap/resizepress"
                android:scaleType="fitXY"
                android:layout_width="80dp"
                android:layout_marginLeft="80dp"
                android:layout_height="match_parent" />
            <TextView
                android:gravity="center_horizontal"
                android:text="Resize"
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="10dp"
                android:layout_alignStart="@+id/btn_resize"
                android:layout_alignParentBottom="true"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
