<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    tools:context="com.allyouneedapp.palpicandroid.FilterActivity">

    <RelativeLayout
        android:id="@+id/layout_nav_filter"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/btn_back_filter"
            android:layout_width="60dp"
            android:background="@color/colorClear"
            android:text="@string/back"
            android:textColor="@color/colorNavItemTextPressed"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/filter"
            android:textColor="@color/colorWhite"
            android:textSize="9pt"
            android:gravity="center"/>
        <Button
            android:id="@+id/btn_next_filter"
            android:layout_width="60dp"
            android:text="@string/next"
            android:background="@color/colorClear"
            android:textColor="@color/colorNavItemText"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>
        <Button
            android:id="@+id/btn_resume_filter"
            android:layout_width="60dp"
            android:text="@string/resume"
            android:background="@color/colorClear"
            android:textColor="@color/colorNavItemText"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_bar_layer_filter"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_above="@id/adView"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rc_filter"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_above="@+id/bottom_bar_layer_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_nav_filter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/gpu_imageView_filter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"/>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
